crates/validation/tests/snapshots/scenario_tests__sync_schedule_requires_the_v2_runtime.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: outcome
---
Outcome {
    built_captures: [],
    built_collections: [],
    built_materializations: [
        BuiltMaterialization {
            materialization: testing/materialization,
            scope: test://example/catalog.yaml#/materializations/testing~1materialization,
            control_id: "0000000000000000",
            data_plane_id: "1d1d1d1d1d1d1d1d",
            expect_pub_id: "0000000000000000",
            expect_build_id: "0000000000000000",
            model: {
              "endpoint": {
                "connector": {
                  "image": "an/image",
                  "config": {}
                }
              },
              "bindings": [],
              "shards": {
                "disable": true
              },
              "syncSchedule": {
                "baseInterval": "15m"
              }
            },
            model_fixes: [],
            validated: Validated {
                bindings: [],
            },
            spec: MaterializationSpec {
                name: "testing/materialization",
                connector_type: Image,
                config_json: b"{\"image\":\"an/image\",\"config\":{}}",
                bindings: [],
                shard_template: Some(
                    ShardSpec {
                        id: "materialize/testing/materialization/2020202020202020",
                        sources: [],
                        recovery_log_prefix: "recovery",
                        hint_prefix: "/estuary/flow/hints",
                        hint_backups: 2,
                        max_txn_duration: Some(
                            Duration {
                                seconds: 1200,
                                nanos: 0,
                            },
                        ),
                        min_txn_duration: Some(
                            Duration {
                                seconds: 0,
                                nanos: 0,
                            },
                        ),
                        disable: true,
                        hot_standbys: 0,
                        labels: Some(
                            LabelSet {
                                labels: [
                                    Label {
                                        name: "app.gazette.dev/managed-by",
                                        value: "estuary.dev/flow",
                                        prefix: false,
                                    },
                                    Label {
                                        name: "estuary.dev/build",
                                        value: "2121212121212121",
                                        prefix: false,
                                    },
                                    Label {
                                        name: "estuary.dev/log-level",
                                        value: "info",
                                        prefix: false,
                                    },
                                    Label {
                                        name: "estuary.dev/task-name",
                                        value: "testing/materialization",
                                        prefix: false,
                                    },
                                    Label {
                                        name: "estuary.dev/task-type",
                                        value: "materialization",
                                        prefix: false,
                                    },
                                ],
                            },
                        ),
                        disable_wait_for_ack: false,
                        ring_buffer_size: 65536,
                        read_channel_size: 4096,
                    },
                ),
                recovery_log_template: Some(
                    JournalSpec {
                        name: "recovery/materialize/testing/materialization/2020202020202020",
                        replication: 3,
                        labels: Some(
                            LabelSet {
                                labels: [
                                    Label {
                                        name: "app.gazette.dev/managed-by",
                                        value: "estuary.dev/flow",
                                        prefix: false,
                                    },
                                    Label {
                                        name: "content-type",
                                        value: "application/x-gazette-recoverylog",
                                        prefix: false,
                                    },
                                    Label {
                                        name: "estuary.dev/build",
                                        value: "2121212121212121",
                                        prefix: false,
                                    },
                                    Label {
                                        name: "estuary.dev/task-name",
                                        value: "testing/materialization",
                                        prefix: false,
                                    },
                                    Label {
                                        name: "estuary.dev/task-type",
                                        value: "materialization",
                                        prefix: false,
                                    },
                                ],
                            },
                        ),
                        fragment: Some(
                            Fragment {
                                length: 268435456,
                                compression_codec: Snappy,
                                stores: [
                                    "s3://a-bucket/",
                                ],
                                refresh_interval: Some(
                                    Duration {
                                        seconds: 300,
                                        nanos: 0,
                                    },
                                ),
                                retention: None,
                                flush_interval: Some(
                                    Duration {
                                        seconds: 172800,
                                        nanos: 0,
                                    },
                                ),
                                path_postfix_template: "",
                            },
                        ),
                        flags: 4,
                        max_append_rate: 4194304,
                        suspend: None,
                    },
                ),
                network_ports: [],
                inactive_bindings: [],
                triggers_json: b"",
                created_at: "",
                sync_schedule_json: b"{\"baseInterval\":\"15m\"}",
                linked_collections: [],
            },
            previous_spec: NULL,
            is_touch: 0,
            dependency_hash: NULL,
        },
    ],
    built_tests: [],
    captures: [],
    collections: [],
    errors: [
        Error {
            scope: test://example/catalog.yaml#/materializations/testing~1materialization/syncSchedule,
            error: materialization testing/materialization specifies a sync schedule, which is enforced only by the V2 runtime; add `enable-runtime-v2: "true"` to the task's `shards.flags`, or remove syncSchedule,
        },
    ],
    errors_draft: [],
    fetches: [
        Fetch {
            depth: 1,
            resource: test://example/catalog.yaml,
        },
    ],
    imports: [],
    materializations: [
        DraftMaterialization {
            materialization: testing/materialization,
            scope: test://example/catalog.yaml#/materializations/testing~1materialization,
            expect_pub_id: NULL,
            model: {
              "endpoint": {
                "connector": {
                  "image": "an/image",
                  "config": {}
                }
              },
              "bindings": [],
              "shards": {
                "disable": true
              },
              "syncSchedule": {
                "baseInterval": "15m"
              }
            },
            is_touch: 0,
        },
    ],
    resources: [
        Resource {
            resource: test://example/catalog.yaml,
            content_type: "CATALOG",
            content: ".. binary ..",
            content_dom: {"materializations":{"testing/materialization":{"bindings":[],"endpoint":{"connector":{"config":{},"image":"an/image"}},"shards":{"disable":true},"syncSchedule":{"baseInterval":"15m"}}}},
        },
    ],
    tests: [],
}
