crates/validation/tests/snapshots/scenario_tests__test_step_verify_key_order.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors

---
[
    Error {
        scope: test://example/int-string-tests#/tests/testing~1test/0,
        error: documents to verify are not in collection key order,
    },
]
