crates/validation/tests/snapshots/scenario_tests__typescript_lambdas_without_module.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/int-reverse#/collections/testing~1int-reverse/derivation,
        error: derivation uses TypeScript lambdas but defines no TypeScript module,
    },
]
