crates/validation/tests/snapshots/scenario_tests__typescript_module_used_multiple_times.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/int-halve#/collections/testing~1int-halve/derivation,
        error: TypeScript module test://example/int-halve.ts must be unique to one derivation, but is used here by testing/int-halve and also by testing/int-reverse at test://example/int-reverse#/collections/testing~1int-reverse/derivation,
    },
]
