crates/validation/tests/snapshots/scenario_tests__typescript_modules_without_lambdas.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/int-reverse#/collections/testing~1int-reverse/derivation,
        error: derivation defines a TypeScript module but uses no TypeScript lambdas,
    },
]
