crates/validation/tests/snapshots/scenario_tests__uuid_ptr_has_redact_block.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/int-reverse#/collections/testing~1int-reverse/schema,
        error: location /_meta/uuid has a `redact` strategy, which is disallowed because /_meta/uuid holds the runtime document UUID,
    },
    Error {
        scope: test://example/int-string#/collections/testing~1int-string/schema,
        error: location /_meta/uuid has a `redact` strategy, which is disallowed because /_meta/uuid holds the runtime document UUID,
    },
    Error {
        scope: test://example/int-string#/collections/testing~1int-string-ref-write-schema/writeSchema,
        error: location /_meta/uuid has a `redact` strategy, which is disallowed because /_meta/uuid holds the runtime document UUID,
    },
    Error {
        scope: test://example/int-string#/collections/testing~1int-string-ref-write-schema/readSchema,
        error: location /_meta/uuid has a `redact` strategy, which is disallowed because /_meta/uuid holds the runtime document UUID,
    },
    Error {
        scope: test://example/int-string#/collections/testing~1int-string-rw/writeSchema,
        error: location /_meta/uuid has a `redact` strategy, which is disallowed because /_meta/uuid holds the runtime document UUID,
    },
    Error {
        scope: test://example/int-string#/collections/testing~1int-string.v2/schema,
        error: location /_meta/uuid has a `redact` strategy, which is disallowed because /_meta/uuid holds the runtime document UUID,
    },
]
