crates/validation/tests/snapshots/scenario_tests__validate_partition_on_magic_projection.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/catalog.yaml#/collections/testing~1with_truncation_sentinel/projections/custom_uuid_ts,
        error: synthetic projection 'custom_uuid_ts' for location '/_meta/uuid/date-time' cannot be used for partitioning,
    },
    Error {
        scope: test://example/catalog.yaml#/collections/testing~1with_truncation_sentinel/projections/flow_document,
        error: synthetic projection 'flow_document' for location '' cannot be used for partitioning,
    },
    Error {
        scope: test://example/catalog.yaml#/collections/testing~1with_truncation_sentinel/projections/flow_truncated,
        error: synthetic projection 'flow_truncated' for location '/_meta/flow_truncated' cannot be used for partitioning,
    },
]
